--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,2 +1,21 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
+
+  
+.navbar-dark {
+    background-color: #3E2723;  /* Deep brown */
+  }
+  
+  .navbar-dark .navbar-nav .nav-link {
+    color: #F5F5F5;  /* Light warm gray */
+  }
+  
+  /* Hover effect on navbar links */
+  .navbar-dark .navbar-nav .nav-link:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+    color: #FF7043; /* Warm coral color on hover */
+  }
+  
+  .alert {
+    margin-left: 20px;
+}
