--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,32 +1,32 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <div class="container-fluid">
-    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-      <h1 class="navbar-brand">Bill Splitting Application</h1>
-    </div>
-    
+    <!-- Navbar Brand centered -->
+    <a class="navbar-brand mx-auto" href="#">Bill Splitting Application</a>
+
+    <!-- Navbar links -->
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
       <ul class="navbar-nav ms-auto">
         <% if user_signed_in? %>
+          <!-- Display logged-in user -->
           <li class="nav-item">
-            <p class="nav-link text-white">Logged in as <strong><%= current_user.email %></strong>. |</p>
+            <p class="nav-link text-white">Logged in as <strong><%= current_user.email %></strong></p>
+          </li>
+          
+          <!-- Edit Profile and Logout links styled as buttons -->
+          <li class="nav-item">
+            <%= link_to 'Edit Profile', edit_user_registration_path, class: 'nav-link btn btn-outline-light btn-sm' %>
           </li>
           <li class="nav-item">
-              <%= link_to 'Edit profile |', edit_user_registration_path, :class => 'nav-link' %>
+            <%= button_to "Log Out", destroy_user_session_path, method: :delete, class: 'nav-link btn btn-outline-light btn-sm' %>
           </li>
-          <li class="nav-item">
-              <%= button_to(
-                "Log Out",
-                destroy_user_session_path,
-                method: :delete,
-                :class => 'nav-link btn btn-sm btn-danger'
-              ) %>
-          </li>
+          
         <% else %>
+          <!-- Sign up and Login links -->
           <li class="nav-item">
-              <%= link_to "Sign up", new_user_registration_path, :class => 'nav-link'  %>
+            <%= link_to "Sign up", new_user_registration_path, class: 'nav-link btn btn-outline-light btn-sm' %>
           </li>
           <li class="nav-item">
-              <%= link_to "Login", new_user_session_path, :class => 'nav-link'  %>
+            <%= link_to "Login", new_user_session_path, class: 'nav-link btn btn-outline-light btn-sm' %>
           </li>
         <% end %>
       </ul>
