--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,29 +1,54 @@
-<h2>Sign up</h2>
+<!-- Section: Design Block -->
+<section class="">
+  <!-- Jumbotron -->
+  <div class="px-4 py-5 px-md-5 text-center text-lg-start" style="height: 93vh; background-color: hsl(0, 0%, 96%)">
+    <div class="container">
+      <div class="row gx-lg-5 align-items-center">
+        <div class="col-lg-6 mb-5 mb-lg-0">
+          <h1 class="my-5 display-3 fw-bold ls-tight">
+            Join us today <br />
+            <span class="text-primary">and simplify your expenses.</span>
+          </h1>
+          <p style="color: hsl(217, 10%, 50.8%)">
+            Create your account to start splitting expenses, managing bills, and keeping everything hassle-free.
+          </p>
+        </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
+        <div class="col-lg-6 mb-5 mb-lg-0">
+          <div class="card">
+            <div class="card-body py-5 px-md-5">
+              <h1>Sign Up</h1>
+              <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+                <%= render "users/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+                <div class="field form-outline mt-4 mb-4">
+                  <%= f.email_field :email, autofocus: true, autocomplete: "email", :class => 'form-control' %>
+                  <%= f.label :email %>
+                </div>
+
+                <div class="field form-outline mb-4">
+                  <%= f.password_field :password, autocomplete: "new-password", :class => 'form-control' %>
+                  <%= f.label :password %>
+                  <% if @minimum_password_length %>
+                    <small>(<%= @minimum_password_length %> characters minimum)</small>
+                  <% end %>
+                </div>
+
+                <div class="field form-outline mb-4">
+                  <%= f.password_field :password_confirmation, autocomplete: "new-password", :class => 'form-control' %>
+                  <%= f.label :password_confirmation %>
+                </div>
+
+                <div class="actions">
+                  <%= f.submit "Sign up", :class => 'form-control btn btn-primary btn-block mb-4' %>
+                </div>
+              <% end %>
+              <%= render "users/shared/links" %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+  <!-- Jumbotron -->
+</section>
